dark mode changes + fixes from nesnes/teleplot

--- a/online-decoder/static/css/style.css
+++ b/online-decoder/static/css/style.css
@@ -72,13 +72,24 @@ button {
 	margin-right: 10px;
 }
 
+.play-pause-button-paused {
+	background-color: #2ecc71;
+}
+
+.style-button {
+	color: 	#2d2d30;
+	text-decoration: underline;
+	cursor: pointer;
+	margin-left: 0.25em;
+}
+
 body {
 	margin: 0px;
 	padding: 0px;
-	background-color: #ecf0f1;
 }
 
 .main-body {
+	background-color: #ecf0f1;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -323,6 +334,10 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+.serie-name {
+    color: black;
 }
 
 .serie-header-container {
